--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="SignUP"><u>Signup</u></string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="about_text">about</string>
 </resources>
